--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "validate",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,9 +18,6 @@
     "@babel/preset-env": "^7.22.10",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.2.0",
-    "@rollup/plugin-typescript": "^11.1.2",
-    "rollup": "^3.28.0",
-    "tslib": "^2.6.1",
-    "typescript": "^5.1.6"
+    "rollup": "^3.28.0"
   }
 }
