--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "x-validate",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "author": "yiqi",
   "description": "js字段校验工具",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rollup -c -w"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/yiqia/validate.js"
